# 4-wheel-robot-SLAM-and-Autonomous-Navigation

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_bridge.yaml  nav2_params.yaml  slam.yaml
launch/: gazebo.launch.py  house.launch.py  navigation.launch.py  rviz.launch.py  slam.launch.py
maps/: my_navigation_map.pgm  my_navigation_map.yaml
meshes/: base_link.stl  camera_1.stl  candy_1.stl  left_back_wheel_1.stl  left_front_wheel_1.stl  lidar_1.stl  right_back_wheel_1.stl  right_front_wheel_1.stl
rviz/: navigation.rviz
scripts/: activate_nav.sh  odom_to_tf.py
urdf/: final_project.gazebo  final_project.ros2control  final_project.xacro
worlds/: house_world.sdf
