<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_project_description</name>
  <version>0.0.0</version>
  <description>Final project with SLAM and Navigation</description>
  <maintainer email="vuddemarri.s@northeastern.edu">Shourya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot Description -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <!-- Gazebo -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <!-- Navigation -->
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>

  <!-- SLAM -->
  <depend>slam_toolbox</depend>

  <!-- Messages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
